--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
+    "react-lazy-load-image-component": "^1.4.3",
     "react-loadable": "^5.5.0",
     "react-redux": "5.0.7",
     "react-router-dom": "^5.1.2",
