--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "react-loadable": "^5.5.0",
     "react-redux": "5.0.7",
     "react-router-dom": "^5.1.2",
-    "react-tiny-virtual-list": "^2.2.0",
     "react-toastify": "^5.5.0",
+    "react-virtualized": "^9.21.2",
     "redis": "^3.0.2",
     "redux": "3.7.2",
     "redux-pack": "^0.1.5",
